@@ -1,0 +1,6 @@
+<div class="test_group">
+    {{> test-styled-atom }}
+    {{> test-styled-atom:test_2 }}
+    {{> test-styled-atom:test_3 }}
+    {{> test-styled-atom}}
+</div>
